test/bad/args.prog
//Wrong argument count
f a b = a + b;
g x = f x (x+1) (x+2)
